# var

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: ci.yml
docs/: operator_result.md
examples/asm-example/: helloworld.asm
examples/c-example/: c-example.c
examples/cpp-example/: cpp-example.cpp
src/: var-c.cpp  var-c.h  var.cpp  var.hpp
tests/: json-test-suite-filenames.h  test-operators.cpp  test-var.cpp
tools/: generate.cpp
